# SDN-Aegis-Integration

./: BLUEPRINT.json  BLUEPRINT_VERIFY.md  Cargo.toml  DEVGUIDE.md  QPU.Datashard.SDN-Aegis.v1.aln  README.md  REGSTACK.md  REGSTACK_TESTPLAN.md
.github/workflows/: sdn-aegis-ci.yml
crates/aegis-attestation-auet/: Cargo.toml
crates/aegis-attestation-auet/src/: lib.rs  merkle.rs  proofs.rs  snapshot.rs
crates/aegis-ava-ma/: Cargo.toml
crates/aegis-ava-ma/src/: detectors.rs  features.rs  lib.rs  risk_score.rs
crates/aegis-bci-bridge/: Cargo.toml
crates/aegis-bci-bridge/src/: bci_schema.rs  lib.rs  mapper.rs  safety_hooks.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: energy_state.rs  flow_id.rs  hex_hash.rs  lib.rs  safety_types.rs
crates/aegis-iot-gateway/: Cargo.toml
crates/aegis-iot-gateway/src/: config.rs  lib.rs  server.rs
crates/aegis-ledger-auet-csp/: Cargo.toml
crates/aegis-ledger-auet-csp/src/: mapping.rs
crates/aegis-ledger-auet-csp/tests/: invariants.rs
crates/aegis-safety-envelope/: Cargo.toml
crates/aegis-safety-envelope/src/: lib.rs  rf.rs
crates/aegis-sdn-plane/: Cargo.toml
crates/aegis-sdn-plane/src/: lib.rs  model.rs  policy_adapter.rs
crates/aegis-sim-harness/: Cargo.toml
crates/aegis-sim-harness/src/: generators.rs  lib.rs  metrics.rs  scenarios.rs
crates/aegis-sim-harness/tests/: non_minting.rs  safety_never_exceeded.rs
datasets/: ALN.SDN-Aegis.EnergyModel.v1.aln  ALN.SDN-Aegis.SafetyEnvelope.v1.aln
ontologies/: neuroxr-core.alnx
sdn-aegis-cli/: Cargo.toml
sdn-aegis-cli/src/: main.rs
